zurracapoteconf.appspot.com/css/style.css
/* ... */
/*-------------------------------------------------------*/
/* Navigation
/*-------------------------------------------------------*/

.main-nav {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 200;
  width: 100%;
  height: 70px;
  -moz-transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.logo-light {
  float: left;
  position: relative;
  z-index: 10;
}

.logo {
  display: table-cell;
  vertical-align: middle;
  height:100%;
  padding-top: 5%;
  -moz-transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.main-nav.sticky {
  position: fixed;
  width: 100%;
  height: 70px;
  background-color: #0e1830;
}
.main-nav.sticky .logo {
  height: 70px;
}
@media (min-width: 768px) {
  .navbar-toggle {
    display: block;
  }
}
@media (max-width: 985px) {
  .logo img{
    height: 100%;
    width: 100%;
    padding: -3%;
    margin: -3%;
  }
}
@media (max-width:789px) {
  .logo img{
    height: 85%;
    width: 85%;
    padding: -3%;
    margin: -3%;
  }
}
@media (max-width:703px) {
  .logo img{
    height:75%;
    width: 75%;
    padding: -3%;
    margin: -3%;
  }
}
@media (max-width:645px) {
  .logo img{
    height: 65%;
    width: 65%;
    padding: -3%;
    margin: -3%;
  }
}
@media (max-width:629px) {
  .logo img{
    height: 55%;
    width: 55%;
    padding: -3%;
    margin: -3%;
  }
}
@media (max-width:589px) {
  .logo img{
    position: absolute;
    height: 0%;
    width: 0%;
  }
  .main-nav.sticky .logo img{
    position: relative;
    height: 100%;
    width: 80%;
    margin: -1%;
    padding: -1%;

  }
  .navbar-toggle {
    padding-top:-0.1%;
    margin: -0.1%;
  }
  .main-nav.sticky .navbar-toggle {
    margin: 4%;
  }
}
nav,
.navbar-toggle {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

nav {
  position: fixed;
  z-index: 300;
  background-color: rgba(255, 255, 255, 0.95);
  width: 100%;
  height: 100%;
  text-align: center;
  margin: 0% auto;
  color: white;
}

.nav-hide {
  display: none;
}

nav ul {
  margin: -222px -87px;
  position: absolute;
  left: 50%;
  top: 50%;
  padding-left: 0 !important;
}

nav ul li {
  list-style: none;
}

nav ul li a {
  font-family: "Roboto", arial, sans-serif;
  font-size: 36px;
  color: #333;
  font-weight: 300;
  text-decoration: none;
  text-transform: uppercase;
  -moz-transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.navbar-toggle {
  padding-top: 1%;
  margin-right: 0;
  width: 47px;
  height: 45px;
  z-index: 300;
  cursor: pointer;
}

.bar1,
.bar2,
.bar3 {
  width: 100%;
  height: 2px;
  margin-bottom: 5px;
  background-color: #fff;
  transition: all 0.3s ease-in-out;
}

.navbar-on .bar1,
.navbar-on .bar2,
.navbar-on .bar3 {
  background-color: #333;
}

.navbar-on .bar1 {
  transform-origin: 10% 40%;
  transform: rotate(45deg);
}

.navbar-on .bar3 {
  transform-origin: 10% 40%;
  transform: rotate(-45deg);
}

.navbar-on .bar2 {
  background-color: transparent;
}

nav ul li.active > a {
  color: #3142a3;
}

.nav > li > a:focus,
.nav > li > a:hover {
  text-decoration: none;
  background-color: transparent;
  color: #3142a3;
  -moz-transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

/*Go to Top*/

#back-to-top {
  display: block;
  z-index: 500;
  width: 52px;
  height: 52px;
  text-align: center;
  font-size: 36px;
  position: fixed;
  bottom: -52px;
  right: 20px;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  transition: all 1s ease;
  background-color: #fff;
  text-decoration: none;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  box-shadow: 1px 1.732px 16px 0px rgba(0, 0, 0, 0.16),
    1px 1.732px 5px 0px rgba(0, 0, 0, 0.12);
}

#back-to-top i {
  margin-right: 2px;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  transition: all 1s ease;
}

#back-to-top a {
  width: 52px;
  height: 52px;
  display: block;
  color: #0e1830;
}

#back-to-top.show {
  bottom: 20px;
}

#back-to-top:hover {
  background-color: #0e1830;
}

#back-to-top:hover i {
  color: #fff;
}

/*-------------------------------------------------------*/
/* Content Home
/*-------------------------------------------------------*/

/*Intro*/

.intro {
  padding: 60px 0;
}
.section-wrap {
  padding: 56px 0;
}
.intro-heading {
  font-size: 42px;
  line-height: 56px;
  padding-top: 56px;
}

.intro-text {
  font-size: 17px;
  line-height: 32px;
  text-align: left;
  margin-top: 24px;
}

/*Results*/
.statistic span {
  font-size: 57px;
  font-weight: 300;
  font-family: "Roboto", Arial, sans-serif;
  color: #fff;
}

/*Portfolio*/

.subheading {
  font-family: "Roboto", Arial, sans-serif;
  color: #9e9e9e;
  font-size: 16px;
}

.portfolio-filter {
  list-style: none;
  margin-bottom: 40px;
  text-align: center;
  font-size: 12px;
}

.portfolio-filter a.active {
  color: #fff;
  background-color: #0e1830;
}

.portfolio-filter a {
  display: inline-block;
  margin: 0 5px;
  color: #4c4c4c;
  text-transform: uppercase;
  background-color: #f5f5f5;
  letter-spacing: 0.1em;
  padding: 11px 19px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  text-decoration: none;
}

.portfolio-filter a:hover {
  color: #fff;
  background-color: #0e1830;
}

.masonry-item {
  margin-top: 6px;
  width: 33%;
  height: auto;
  float: left;
  overflow: hidden;
}

.work-img img {
  overflow: hidden;
  background-color: rgba(255, 255, 255, 1);
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
/* ... */

